# d4f-emissions

./: Makefile  README.md  config.json  pyproject.toml  streamlit_app.py
d4f_emissions/: app.py  data.py
data/OWID_co2-and-other-ghg-emissions/: cumulative-co-emissions.csv
