[tool.poetry]
name = "d4f-emissions"
version = "0.1.0"
description = "Interactive analysis of greenhouse gas emissions."
authors = ["Sebastian Schneider <sschneider@point-8.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
plotly = "^4.13.0"
streamlit = "^0.72.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
isort = "^5.6.4"
flake8 = "^3.8.4"
jupyter = "^1.0.0"
ipython = "^7.19.0"
notebook = "^6.1.5"
jupyterlab = "^2.2.9"
ipywidgets = "^7.5.1"
mypy = "^0.790"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 80
target-version = ["py38"]

[mypy]
python_version = 3.8
no_implicit_optional = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
